fixed spacing in build status text align

--- a/assets/styles/main/summary.sass
+++ b/assets/styles/main/summary.sass
@@ -71,7 +71,7 @@
 
     a
       color: white
-      padding-left: 24px
+      padding-left: 21px
 
   .runtime
     font-size: 13px
